Visionaries responsive and fix service page hero z-index

--- a/src/styles/01-settings/_settings.breakpoints.scss
+++ b/src/styles/01-settings/_settings.breakpoints.scss
@@ -7,5 +7,7 @@
     sm: 576px,
     md: 768px,
     lg: 1024px,
-    xl: 1441px
+    xl: 1280px,
+    xxl: 1440px,
+    xxxl: 1920px
   )
