--- a/src/styles/05-objects/_objects.banner.scss
+++ b/src/styles/05-objects/_objects.banner.scss
@@ -20,7 +20,7 @@
     padding-top: rem(90px);
     will-change: transform;
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
       height: rem(600px);
     }
 
