--- a/src/styles/05-objects/_objects.main.scss
+++ b/src/styles/05-objects/_objects.main.scss
@@ -3,5 +3,4 @@
   overflow: hidden !important;
   will-change: transform;
   position: relative;
-  z-index: 2;
 }
