--- a/src/styles/05-objects/_objects.visionaries.scss
+++ b/src/styles/05-objects/_objects.visionaries.scss
@@ -15,33 +15,44 @@
 
   &__title {
     color:   $grey;
-    font-size: rem(190px);
-    line-height: rem(190px);
+    font-size: rem(58px);
+    line-height: rem(58px);
     letter-spacing: -5px;
     font-family: $font-family-base;
     font-weight: $font-weight-bolder;
     mix-blend-mode: darken;
     background-color: $white;
 
-    @include media-breakpoint-up(xl) {
-      font-size: rem(314px);
-      line-height: rem(314px);
-    }
-
-    @include media-breakpoint-down(lg) {
-      font-size: rem(120px);
-      line-height: rem(120px);
-    }
-
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-up(sm) {
       font-size: rem(100px);
       line-height: rem(100px);
     }
 
-    @include media-breakpoint-down(sm) {
-      font-size: rem(58px);
-      line-height: rem(58px);
+    @include media-breakpoint-up(md) {
+      font-size: rem(130px);
+      line-height: rem(130px);
     }
+
+    @include media-breakpoint-up(lg) {
+      font-size: rem(170px);
+      line-height: rem(170px);
+    }
+
+    @include media-breakpoint-up(xl) {
+      font-size: rem(215px);
+      line-height: rem(215px);
+    }
+
+    @include media-breakpoint-up(xxl) {
+      font-size: rem(245px);
+      line-height: rem(245px);
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: rem(314px);
+      line-height: rem(314px);
+    }
+
   }
 
   &__symbol {
